# time-series-exploration

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_ES.md  docker-compose.yml  main.py  pyproject.toml  run_experiment.py  run_kafka_monitor.py  run_kafka_producer.py  run_streaming.py  run_streaming_kafka.py  time_series_sim.py
.cursor/plans/: kafka_integration_plan_07495378.plan.md  sagemaker_deployment_plan_a2244e75.plan.md
.cursor/rules/: project-context.mdc
config/: settings.py
data_simulation/: generator.py  kafka_stream.py  stream.py
docs/: kafka-learning.md
features/: pipeline.py  registry.py  transformations.py
mlflow_integration/: __init__.py  config.py  tracking.py
models/: inference.py  registry.py  training.py
monitoring/: drift.py
pipeline/: forecasting_pipeline.py
scripts/: migrate_artifacts.py
