[project]
name = "time-series-analysis"
version = "0.1.0"
description = "ML Pipeline for Time Series Forecasting with MLFlow, Airflow and AWS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "mlflow>=2.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
airflow = [
    "apache-airflow>=2.5.0",
    "apache-airflow-providers-amazon>=9.0.0",
]
aws = [
    "boto3>=1.26.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "config",
    "models", 
    "pipeline",
    "features",
    "monitoring",
    "data_simulation"
]